# test-cmake-project

./: CMakeLists.txt
test cmake project/: CMakeLists.txt  test cmake project.cpp  test cmake project.h
