# CMakeList.txt : CMake project for test cmake project, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (testcmakeproject "test cmake project.cpp" "test cmake project.h")

# TODO: Add tests and install targets if needed.
